Самая финальная версия

--- a/catalog.html
+++ b/catalog.html
@@ -268,7 +268,7 @@
       </div>
       <div class="product">
         <img src="img/icecream-vanilla-chocolate-chips.png" width="267" height="267" alt="ice-cream-vanilla-chocolate-chips">
-        <div class="pricе">
+        <div class="price">
           440
           <span class="ruble">Р</span>
           <span class="minify">/кг</span>
