--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="subscription clearfix">
               <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
               <form action="/echo" method="post">
-                <input type="email" name="email" required id="email">
+                <input type="text" name="text" required id="email">
                 <label for="email" data-placeholder="Электронная почта"></label>
                 <input type="submit" value="Отправить" class="btn btn-red btn-subscription">
               </form>
@@ -189,7 +189,7 @@
           <p>Для заказов по телефону:</p>
           <span><strong>8 812 450-25-25</strong></span>
           <br> (c 10 до 20 ежедневно)
-          <a href="#" class="btn btn-red">Форма обратной связи</a>
+          <a href="modalwindow.html" class="btn btn-red">Форма обратной связи</a>
         </div>
       </div>
     </main>
@@ -223,7 +223,7 @@
       <input type="text" name="email" required id="feedback-email">
       <label for="feedback-email" data-placeholder="Ваша почта для ответа?"></label>
       <br>
-      <textarea rows="1" cols="1" id="feedback-textarea" required></textarea>
+      <textarea rows="1" cols="1" required id="feedback-textarea"></textarea>
       <label for="feedback-textarea" data-placeholder="Напишите что-нибудь..."></label>
       <input type="submit" class="btn btn-red" value="Отправить">
       <input type="submit" class="close" value="close">
