--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="ice-cream glaccy shop buy">
   <meta name="description" content="shop of ice-cream">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 
@@ -24,17 +24,17 @@
           </div>
           <nav class="clearfix main-navigation">
             <ul class="main-navigation">
-              <li><a href="#">Каталог</a>
+              <li class="item"><a href="#">Каталог</a>
                 <ul class="catalog-navigation">
-                  <li><a href="#">Новинки</a></li>
-                  <li><a href="catalog.html">Сливочное</a></li>
-                  <li><a href="#">Щербеты</a></li>
-                  <li><a href="#">Фруктовый лед</a></li>
-                  <li><a href="#">Мелорин</a></li>
+                  <li class="component"><a href="#">Новинки</a></li>
+                  <li class="component"><a href="catalog.html">Сливочное</a></li>
+                  <li class="component"><a href="#">Щербеты</a></li>
+                  <li class="component"><a href="#">Фруктовый лед</a></li>
+                  <li class="component"><a href="#">Мелорин</a></li>
                 </ul>
               </li>
-              <li><a href="#">Доставка и оплата</a></li>
-              <li><a href="#">О Компании</a></li>
+              <li class="item"><a href="#">Доставка и оплата</a></li>
+              <li class="item"><a href="#">О Компании</a></li>
             </ul>
           </nav>
           <div class="basket">
@@ -229,7 +229,7 @@
       <input type="submit" class="close" value="close">
     </form>
   </div>
-  <script src="js/script.js"></script>
+  <script src="js/script.min.js"></script>
 </body>
 
 </html>
