Исправлена ошибка в выпадающем меню

--- a/catalog.html
+++ b/catalog.html
@@ -20,7 +20,8 @@
         </div>
         <nav>
           <ul class="main-navigation">
-            <li class="item"><a href="#" class="catalog">Каталог</a>
+            <li class="item">
+              <a href="#" class="catalog">Каталог</a>
               <ul class="catalog-navigation">
                 <li class="component"><a href="#">Новинки</a></li>
                 <li class="creamy">Сливочное</li>
