--- a/catalog.html
+++ b/catalog.html
@@ -20,18 +20,18 @@
         </div>
         <nav>
           <ul class="main-navigation">
-            <li class="item">
+            <li class="main-navigation-item">
               <a href="#" class="catalog">Каталог</a>
               <ul class="catalog-navigation">
-                <li class="component"><a href="#">Новинки</a></li>
+                <li class="catalog-navigation-component"><a href="#">Новинки</a></li>
                 <li class="creamy">Сливочное</li>
-                <li class="component"><a href="#">Щербеты</a></li>
-                <li class="component"><a href="#">Фруктовый лед</a></li>
-                <li class="component"><a href="#">Мелорин</a></li>
+                <li class="catalog-navigation-component"><a href="#">Щербеты</a></li>
+                <li class="catalog-navigation-component"><a href="#">Фруктовый лед</a></li>
+                <li class="catalog-navigation-component"><a href="#">Мелорин</a></li>
               </ul>
             </li>
-            <li class="item"><a href="#">Доставка и оплата</a></li>
-            <li class="item"><a href="#">О компании</a></li>
+            <li class="main-navigation-item"><a href="#">Доставка и оплата</a></li>
+            <li class="main-navigation-item"><a href="#">О компании</a></li>
           </ul>
         </nav>
         <div class="basket basket-full">
