--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
           </div>
           <nav class="clearfix main-navigation">
             <ul class="main-navigation">
-              <li class="item"><a href="#">Каталог</a>
+              <li class="main-navigation-item"><a href="#">Каталог</a>
                 <ul class="catalog-navigation">
-                  <li class="component"><a href="#">Новинки</a></li>
-                  <li class="component"><a href="catalog.html">Сливочное</a></li>
-                  <li class="component"><a href="#">Щербеты</a></li>
-                  <li class="component"><a href="#">Фруктовый лед</a></li>
-                  <li class="component"><a href="#">Мелорин</a></li>
+                  <li class="catalog-navigation-component"><a href="#">Новинки</a></li>
+                  <li class="catalog-navigation-component"><a href="catalog.html">Сливочное</a></li>
+                  <li class="catalog-navigation-component"><a href="#">Щербеты</a></li>
+                  <li class="catalog-navigation-component"><a href="#">Фруктовый лед</a></li>
+                  <li class="catalog-navigation-component"><a href="#">Мелорин</a></li>
                 </ul>
               </li>
-              <li class="item"><a href="#">Доставка и оплата</a></li>
-              <li class="item"><a href="#">О Компании</a></li>
+              <li class="main-navigation-item"><a href="#">Доставка и оплата</a></li>
+              <li class="main-navigation-item"><a href="#">О Компании</a></li>
             </ul>
           </nav>
           <div class="basket">
