Добавил карту через API

--- a/index.html
+++ b/index.html
@@ -179,19 +179,19 @@
           </div>
         </div>
       </div>
-      <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123604!2d30.320894615584464!3d59.93879686904855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1455995813422" height="430" style="border:0" allowfullscreen></iframe>
-        <div class="feedback">
-          Адрес нашего офиса и
-          <br>офлайн магазина:
-          <br>
-          <span><strong>ул. Большая Конюшенная<br>19/8, Санкт-Петербург</strong><br></span>
-          <p>Для заказов по телефону:</p>
-          <span><strong>8 812 450-25-25</strong></span>
-          <br> (c 10 до 20 ежедневно)
-          <a href="modalwindow.html" class="btn btn-red">Форма обратной связи</a>
-        </div>
+      <div class="map" id="map-canvas">
       </div>
+      <div class="feedback">
+        Адрес нашего офиса и
+        <br>офлайн магазина:
+        <br>
+        <span><strong>ул. Большая Конюшенная<br>19/8, Санкт-Петербург</strong><br></span>
+        <p>Для заказов по телефону:</p>
+        <span><strong>8 812 450-25-25</strong></span>
+        <br> (c 10 до 20 ежедневно)
+        <a href="modalwindow.html" class="btn btn-red">Форма обратной связи</a>
+      </div>
+      <script async src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
     </main>
     <footer class="main-footer clearfix">
       <div class="container">
