Подготовка к к пересборке для postcss

--- a/catalog.html
+++ b/catalog.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Catalog</title>
   <meta name="keywords" content="ice-cream glaccy shop buy">
   <meta name="description" content="shop of ice-cream">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 
@@ -16,22 +18,36 @@
     <div class="container">
       <div class="header-top clearfix">
         <div class="logo">
-          <a href="index.html"><img src="img/logo-gllacy.svg" width="154" height="64" alt="Gllacyshop"></a>
+          <a href="index.html">
+            <img src="img/logo-gllacy.svg" width="154" height="64" alt="Gllacyshop">
+          </a>
         </div>
         <nav>
           <ul class="main-navigation">
             <li class="main-navigation-item">
               <a href="#" class="catalog">Каталог</a>
               <ul class="catalog-navigation">
-                <li class="catalog-navigation-component"><a href="#">Новинки</a></li>
+                <li class="catalog-navigation-component">
+                  <a href="#">Новинки</a>
+                </li>
                 <li class="creamy">Сливочное</li>
-                <li class="catalog-navigation-component"><a href="#">Щербеты</a></li>
-                <li class="catalog-navigation-component"><a href="#">Фруктовый лед</a></li>
-                <li class="catalog-navigation-component"><a href="#">Мелорин</a></li>
+                <li class="catalog-navigation-component">
+                  <a href="#">Щербеты</a>
+                </li>
+                <li class="catalog-navigation-component">
+                  <a href="#">Фруктовый лед</a>
+                </li>
+                <li class="catalog-navigation-component">
+                  <a href="#">Мелорин</a>
+                </li>
               </ul>
             </li>
-            <li class="main-navigation-item"><a href="#">Доставка и оплата</a></li>
-            <li class="main-navigation-item"><a href="#">О компании</a></li>
+            <li class="main-navigation-item">
+              <a href="#">Доставка и оплата</a>
+            </li>
+            <li class="main-navigation-item">
+              <a href="#">О компании</a>
+            </li>
           </ul>
         </nav>
         <div class="basket basket-full">
@@ -46,7 +62,9 @@
                     <p class="ice-cream-buy">Пломбир с апельсиновым джемом</p>
                   </td>
                   <td class="products-count">
-                    <p>1,5 кг <span class="gray">× 200 руб.</span></p>
+                    <p>1,5 кг
+                      <span class="gray">× 200 руб.</span>
+                    </p>
                   </td>
                   <td class="price-item">
                     <p>300 руб.</p>
@@ -59,7 +77,9 @@
                     <p class="ice-cream-buy ">Клубничный пломбир с присыпкой из белого шоколада</p>
                   </td>
                   <td class="products-count">
-                    <p>1,5 кг <span class="gray ">× 300 руб.</span></p>
+                    <p>1,5 кг
+                      <span class="gray ">× 300 руб.</span>
+                    </p>
                   </td>
                   <td class="price-item">
                     <p>450 руб.</p>
@@ -99,7 +119,8 @@
         </div>
         <div class="contacts">
           C 10 до 20 ежедневно
-          <br> <span class="number">8 812 450-25-25</span>
+          <br>
+          <span class="number">8 812 450-25-25</span>
         </div>
       </div>
     </div>
@@ -332,18 +353,23 @@
         <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
       </div>
       <div class="footer-menu">
-        <a href="#" class="icon"><b>Для поставщиков</b></a>
+        <a href="#" class="icon">
+          <b>Для поставщиков</b>
+        </a>
         <a href="#">О производстве</a>
         <a href="#">Наши документы</a>
         <a href="#">Экологические стандарты</a>
       </div>
       <div class="footer-copyright">
-        <a href="#"><img src="img/logo-ha.svg" width="108" height="37" alt="HTML Academy" class="clearfix"></a>
-        <br>Сделано в <a href="htmlacademy.ru">HTML Academy</a>© 2016
+        <a href="#">
+          <img src="img/logo-ha.svg" width="108" height="37" alt="HTML Academy" class="clearfix">
+        </a>
+        <br>Сделано в
+        <a href="htmlacademy.ru">HTML Academy</a>© 2016
       </div>
     </div>
   </footer>
-  <script src="js/script.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
