--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Gllacy</title>
   <meta name="keywords" content="ice-cream glaccy shop buy">
   <meta name="description" content="shop of ice-cream">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 
@@ -24,17 +26,32 @@
           </div>
           <nav class="clearfix main-navigation">
             <ul class="main-navigation">
-              <li class="main-navigation-item"><a href="#">Каталог</a>
+              <li class="main-navigation-item">
+                <a href="#">Каталог</a>
                 <ul class="catalog-navigation">
-                  <li class="catalog-navigation-component"><a href="#">Новинки</a></li>
-                  <li class="catalog-navigation-component"><a href="catalog.html">Сливочное</a></li>
-                  <li class="catalog-navigation-component"><a href="#">Щербеты</a></li>
-                  <li class="catalog-navigation-component"><a href="#">Фруктовый лед</a></li>
-                  <li class="catalog-navigation-component"><a href="#">Мелорин</a></li>
+                  <li class="catalog-navigation-component">
+                    <a href="#">Новинки</a>
+                  </li>
+                  <li class="catalog-navigation-component">
+                    <a href="catalog.html">Сливочное</a>
+                  </li>
+                  <li class="catalog-navigation-component">
+                    <a href="#">Щербеты</a>
+                  </li>
+                  <li class="catalog-navigation-component">
+                    <a href="#">Фруктовый лед</a>
+                  </li>
+                  <li class="catalog-navigation-component">
+                    <a href="#">Мелорин</a>
+                  </li>
                 </ul>
               </li>
-              <li class="main-navigation-item"><a href="#">Доставка и оплата</a></li>
-              <li class="main-navigation-item"><a href="#">О Компании</a></li>
+              <li class="main-navigation-item">
+                <a href="#">Доставка и оплата</a>
+              </li>
+              <li class="main-navigation-item">
+                <a href="#">О Компании</a>
+              </li>
             </ul>
           </nav>
           <div class="basket">
@@ -68,7 +85,8 @@
           </div>
           <div class="contacts">
             C 10 до 20, ежедневно
-            <br> <span class="number">8 812 450-25-25</span>
+            <br>
+            <span class="number">8 812 450-25-25</span>
           </div>
         </div>
       </div>
@@ -155,10 +173,14 @@
         <section class="advantages clearfix">
           <h1 class="advantages-title"> Магазин Глейси - это онлайн и оффлайн магазин по продаже мороженного собственного производства на развес</h1>
           <ul class="list clearfix">
-            <li class="own-icecream">Все наше мороженное изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-            <li class="farm">Закупка ингридиента производиться только у проверенных фермерских хозяйств и компаний, с которыми нас связывают долговременное сотрудничество.</li>
-            <li class="ecologically">Для приготовления мороженого используется настоящие сливки и молоко высочайшего качества. Все дополнительные ингридиенты добавки произведены из натурального, экологически чистого сырья.</li>
-            <li class="temperature">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, которая не дает мороженному растаять в пути и позволяет ему сохранить свой превосходный вкус.</li>
+            <li class="own-icecream">Все наше мороженное изготавливается на собственном производстве, с использованием современного оборудования и
+              проверенных временем технологий.</li>
+            <li class="farm">Закупка ингридиента производиться только у проверенных фермерских хозяйств и компаний, с которыми нас связывают
+              долговременное сотрудничество.</li>
+            <li class="ecologically">Для приготовления мороженого используется настоящие сливки и молоко высочайшего качества. Все дополнительные
+              ингридиенты добавки произведены из натурального, экологически чистого сырья.</li>
+            <li class="temperature">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, которая не дает мороженному
+              растаять в пути и позволяет ему сохранить свой превосходный вкус.</li>
           </ul>
         </section>
         <div class="news-subscription clearfix">
@@ -169,7 +191,8 @@
           </article>
           <div class="subscription-pattern clearfix">
             <div class="subscription clearfix">
-              <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно=)</p>
+              <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем
+                не спамить и не слать всякой ненужной ерунды. Честно=)</p>
               <form action="/echo" method="post">
                 <input type="text" name="text" required id="email">
                 <label for="email" data-placeholder="Электронная почта"></label>
@@ -185,10 +208,16 @@
         Адрес нашего офиса и
         <br>офлайн магазина:
         <br>
-        <span><strong>ул. Большая Конюшенная<br>19/8, Санкт-Петербург</strong><br></span>
+        <span>
+          <strong>ул. Большая Конюшенная
+            <br>19/8, Санкт-Петербург</strong>
+          <br>
+        </span>
         <p>Для заказов по телефону:</p>
-        <span><strong>8 812 450-25-25</strong></span>
-        <br> (c 10 до 20 ежедневно)
+        <span>
+          <strong>8 812 450-25-25</strong>
+        </span>
+        <br>(c 10 до 20 ежедневно)
         <a href="modalwindow.html" class="btn btn-red">Форма обратной связи</a>
       </div>
       <script async src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
@@ -202,14 +231,19 @@
           <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
         </div>
         <div class="footer-menu clearfix">
-          <a href="#" class="icon"><b>Для поставщиков</b></a>
+          <a href="#" class="icon">
+            <b>Для поставщиков</b>
+          </a>
           <a href="#">Наши документы</a>
           <a href="#">О производстве</a>
           <a href="#">Экологические стандарты</a>
         </div>
         <div class="footer-copyright">
-          <a href="#"><img src="img/logo-ha.svg" width="108" height="37" alt="HTML Academy"></a>
-          <br>Сделано в <a href="htmlacademy.ru">HTML Academy</a>© 2016
+          <a href="#">
+            <img src="img/logo-ha.svg" width="108" height="37" alt="HTML Academy">
+          </a>
+          <br>Сделано в
+          <a href="htmlacademy.ru">HTML Academy</a>© 2016
         </div>
       </div>
     </footer>
@@ -229,7 +263,7 @@
       <input type="submit" class="close" value="close">
     </form>
   </div>
-  <script src="js/script.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
