Сделал единообразное написание классов и добавил font-face

--- a/catalog.html
+++ b/catalog.html
@@ -8,9 +8,7 @@
   <title>Catalog</title>
   <meta name="keywords" content="ice-cream glaccy shop buy">
   <meta name="description" content="shop of ice-cream">
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -25,7 +23,7 @@
         <nav>
           <ul class="main-navigation">
             <li class="main-navigation-item">
-              <a href="#" class="catalog">Каталог</a>
+              <a class="catalog" href="#">Каталог</a>
               <ul class="catalog-navigation">
                 <li class="catalog-navigation-component">
                   <a href="#">Новинки</a>
@@ -78,7 +76,7 @@
                   </td>
                   <td class="products-count">
                     <p>1,5 кг
-                      <span class="gray ">× 300 руб.</span>
+                      <span class="gray">× 300 руб.</span>
                     </p>
                   </td>
                   <td class="price-item">
@@ -89,7 +87,7 @@
             </div>
             <div class="booking clearfix">
               <p>Итого: 750 руб.</p>
-              <a href="#" class="btn btn-red order">Оформить заказ</a>
+              <a class="btn btn-red order" href="#">Оформить заказ</a>
             </div>
           </div>
         </div>
@@ -103,7 +101,7 @@
               <input type="password" name="password" id="login-password" required>
               <label for="login-password" data-placeholder="Пароль">
               </label>
-              <input type="submit" value="Войти" class="btn btn-red">
+              <input class="btn btn-red" type="submit" value="Войти">
               <a href="#">Забыли пароль?</a>
               <a href="#">Новая регистрация</a>
             </form>
@@ -137,7 +135,7 @@
         <div class="filter">
           <h5>Сортировка:</h5>
           <div class="overflow-arrow">
-            <select name=" sorting " class="sorting user-block-btn ">
+            <select class="sorting user-block-btn" name="sorting">
               <option value="popular ">по популярности</option>
               <option value=" cheap ">сначала недорогие</option>
               <option value="expensive ">сначала дорогие</option>
@@ -216,7 +214,7 @@
           <span class="minify">/кг</span>
         </div>
         <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+        <a class="btn btn-red browsing" href="#">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-pieces-chocolate.png" width="267" height="267" alt="ice-cream-pieces-chocolate">
@@ -226,7 +224,7 @@
           <span class="minify">/кг</span>
         </div>
         <a href="#">Сливочно-кофейное с кусочками шоколада</a>
-        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+        <a class="btn btn-red browsing" href="#">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-white-chocolate.png " width="267" height="267" alt="icecream-white-chocolate">
@@ -236,7 +234,7 @@
           <span class="minify">/кг</span>
         </div>
         <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+        <a class="btn btn-red browsing" href="#">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-creme-brulee.png" width="267" height="267" alt="ice-cream-creme-brulee">
@@ -246,7 +244,7 @@
           <span class="minify">/кг</span>
         </div>
         <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
-        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+        <a class="btn btn-red browsing" href="#">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-lingonberry-jam.png " width="267" height="267" alt="ice-cream-lingonberry-ja">
@@ -256,7 +254,7 @@
           <span class="minify">/кг</span>
         </div>
         <a href="#">Сливочное с брусничным джемом</a>
-        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+        <a class="btn btn-red browsing" href="#">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-blueberries.png" width="267" height="267" alt="ice-cream-blueberries">
@@ -266,7 +264,7 @@
           <span class="minify">/кг</span>
         </div>
         <a href="#">Сливочно-черничное с цельными ягодами черники</a>
-        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+        <a class="btn btn-red browsing" href="#">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-lemon-candy.png" width="267" height="267" alt="ice-cream-lemon-candy">
@@ -276,7 +274,7 @@
           <span class="minify">/кг</span>
         </div>
         <a href="#">Сливочно-лимонное с карамельной присыпкой</a>
-        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+        <a class="btn btn-red browsing" href="#">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-chocolate-chips.png" width="267" height="267" alt="ice-cream-chocolate-chips">
@@ -286,7 +284,7 @@
           <span class="minify">/кг</span>
         </div>
         <a href="#">Сливочное с шоколадной стружкой</a>
-        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+        <a class="btn btn-red browsing" href="#">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-vanilla-chocolate-chips.png" width="267" height="267" alt="ice-cream-vanilla-chocolate-chips">
@@ -296,7 +294,7 @@
           <span class="minify">/кг</span>
         </div>
         <a href="#">Сливочно-ванильное с кусочками шоколада</a>
-        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+        <a class="btn btn-red browsing" href="#">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-menthol-syrup.png" width="267" height="267" alt="ice-cream-menthol-syrup">
@@ -306,7 +304,7 @@
           <span class="minify">/кг</span>
         </div>
         <a href="#">Сливочное с ментоловым сиропом</a>
-        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+        <a class="btn btn-red browsing" href="#">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-pieces-dark-chocolate.png" width="267" height="267" alt="ice-cream-pieces-dark-chocolate">
@@ -316,7 +314,7 @@
           <span class="minify">/кг</span>
         </div>
         <a href="#">Сливочное с кусочками черного шоколада</a>
-        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+        <a class="btn btn-red browsing" href="#">Быстрый просмотр</a>
       </div>
       <div class="product">
         <img src="img/icecream-mint-syrup.png" width="267" height="267" alt="ice-cream-mint-syrup">
@@ -326,7 +324,7 @@
           <span class="minify">/кг</span>
         </div>
         <a href="#">Сливочное с мятными сиропом</a>
-        <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+        <a class="btn btn-red browsing" href="#">Быстрый просмотр</a>
       </div>
     </div>
     <div class="main-paginator clearfix">
@@ -334,10 +332,10 @@
         <div class="prev">
         </div>
         <span class="page current">1</span>
-        <a href="#2" class="page">2</a>
-        <a href="#3" class="page">3</a>
-        <a href="#4" class="page">4</a>
-        <a href="#5" class="page">5</a>
+        <a class="page" href="#2">2</a>
+        <a class="page" href="#3">3</a>
+        <a class="page" href="#4">4</a>
+        <a class="page" href="#5">5</a>
         <div class="next">
           <a href="#"></a>
         </div>
@@ -347,13 +345,13 @@
   <footer class="main-footer second-page">
     <div class="container clearfix">
       <div class="footer-social">
-        <a href="#" class="social-btn social-btn-tw">Твиттер</a>
-        <a href="#" class="social-btn social-btn-inst">Инстаграмм</a>
-        <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
-        <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
+        <a class="social-btn social-btn-tw" href="#">Твиттер</a>
+        <a class="social-btn social-btn-inst" href="#">Инстаграмм</a>
+        <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+        <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
       </div>
       <div class="footer-menu">
-        <a href="#" class="icon">
+        <a class="icon" href="#">
           <b>Для поставщиков</b>
         </a>
         <a href="#">О производстве</a>
@@ -362,14 +360,13 @@
       </div>
       <div class="footer-copyright">
         <a href="#">
-          <img src="img/logo-ha.svg" width="108" height="37" alt="HTML Academy" class="clearfix">
+          <img class="clearfix" src="img/logo-ha.svg" width="108" height="37" alt="HTML Academy">
         </a>
         <br>Сделано в
         <a href="htmlacademy.ru">HTML Academy</a>© 2016
       </div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
 </body>
 
 </html>
