--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <title>Gllacy</title>
   <meta name="keywords" content="ice-cream glaccy shop buy">
   <meta name="description" content="shop of ice-cream">
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900&subset=latin,cyrillic" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -68,7 +66,7 @@
                 <label for="login-password" data-placeholder="Пароль">
                 </label>
                 <br>
-                <input type="submit" value="Войти" class="btn btn-red">
+                <input class="btn btn-red" type="submit" value="Войти">
                 <a href="#">Забыли пароль?</a>
                 <a href="#">Новая регистрация</a>
               </form>
@@ -98,15 +96,15 @@
             <div class="slider">
               <div class="slide" id="slide1">
                 <div class="slide-title">Крем-брюле и пломбир &nbsp;с малиновым джемом</div>
-                <a href="#" class="btn btn-red btn-slide">Давайте оба!</a>
+                <a class="btn btn-red btn-slide" href="#">Давайте оба!</a>
               </div>
               <div class="slide" id="slide2">
                 <div class="slide-title">Шоколадный пломбир и лимонный сорбет</div>
-                <a href="#" class="btn btn-slide">Давайте оба!</a>
+                <a class="btn btn-slide" href="#">Давайте оба!</a>
               </div>
               <div class="slide" id="slide3">
                 <div class="slide-title">Пломбир с помадкой и клубничный щербет</div>
-                <a href="#" class="btn btn-red btn-slide">Давайте оба!</a>
+                <a class="btn btn-red btn-slide" href="#">Давайте оба!</a>
               </div>
               <div class="slider-controls">
                 <label for="btn-1"></label>
@@ -120,12 +118,12 @@
           <div class="features-raspberry">
             <h3>Малинка даром!</h3>
             <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-            <a href="#" class="btn btn-red btn-features">Хочу варенье!</a>
+            <a class="btn btn-red btn-features" href="#">Хочу варенье!</a>
           </div>
           <div class="features-chocolate">
             <h3>Шоколадки даром!</h3>
             <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-            <a href="#" class="btn btn-red btn-features">Хочу шоколадки!</a>
+            <a class="btn btn-red btn-features" href="#">Хочу шоколадки!</a>
           </div>
           <div class="products">
             <div class="product hit">
@@ -156,7 +154,7 @@
                 <span class="minify">/кг</span>
               </div>
               <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-              <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+              <a class="btn btn-red browsing" href="#">Быстрый просмотр</a>
             </div>
             <div class="product hit">
               <img src="img/icecream-creme-brulee.png" width="267" height="267" alt="ice-cream-creme-brulee">
@@ -166,7 +164,7 @@
                 <span class="minify">/кг</span>
               </div>
               <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
-              <a href="#" class="btn btn-red browsing">Быстрый просмотр</a>
+              <a class="btn btn-red browsing" href="#">Быстрый просмотр</a>
             </div>
           </div>
         </section>
@@ -196,7 +194,7 @@
               <form action="/echo" method="post">
                 <input type="text" name="text" required id="email">
                 <label for="email" data-placeholder="Электронная почта"></label>
-                <input type="submit" value="Отправить" class="btn btn-red btn-subscription">
+                <input class="btn btn-red btn-subscription" type="submit" value="Отправить">
               </form>
             </div>
           </div>
@@ -218,20 +216,20 @@
           <strong>8 812 450-25-25</strong>
         </span>
         <br>(c 10 до 20 ежедневно)
-        <a href="modalwindow.html" class="btn btn-red">Форма обратной связи</a>
+        <a class="btn btn-red" href="modalwindow.html">Форма обратной связи</a>
       </div>
       <script async src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;sensor=false"></script>
     </main>
     <footer class="main-footer clearfix">
       <div class="container">
         <div class="footer-social">
-          <a href="#" class="social-btn social-btn-tw">Твиттер</a>
-          <a href="#" class="social-btn social-btn-inst">Инстаграмм</a>
-          <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
-          <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
+          <a class="social-btn social-btn-tw" href="#">Твиттер</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграмм</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-vk" href="#" >Вконтакте</a>
         </div>
         <div class="footer-menu clearfix">
-          <a href="#" class="icon">
+          <a class="icon" href="#">
             <b>Для поставщиков</b>
           </a>
           <a href="#">Наши документы</a>
